next
====
    - add migrations

0.5.0 - 1 December 2015
=======================
    - drop South support
    - drop support for Django < 1.8, add support for Django 1.9

0.4.0 - 26 May 2015
====================
    - drop South support
    - drop support for Django < 1.7, add support for Django >= 1.7
    - add Python 3 support
    - add a ton of tests
    - fix bug if vote_name was set in enable_voting_on

0.3.0 - April 16 2015
=====================
    - related_fields and get_object_or_404 fix from François Chapuis
    - add property to check if secretballot is present on a class
    - add indexed timestamps to votes via Simon de Han
    - make response valid JSON for mimetype compatibility via Dan Drinkard

0.2.3 - March 29 2010
=====================
    - bugfixes, thanks to Gennadiy Potapov

0.2.2 - October 26 2009
=======================
    - fixed embarassing SyntaxError in vote

0.2.1 - October 23 2009
=======================
    - fix some documentation issues left from 0.1
    - make content_type more flexible (can now take a model, content_type, or 'app.model' string)

0.2.0 - February 9 2009
========================
    - replace inheritance from VotableObject with enable_voting_on
    - when injecting manager methods inherit from existing manager

0.1.0 - January 23 2009
=======================
    - initial working release