@@ -1,1 +1,3 @@
 voted!
+{{ content_obj }}
+total_upvotes={{ content_obj.total_upvotes }}
